--- a/index.html
+++ b/index.html
@@ -132,7 +132,29 @@
           <tr><td class="rank">10</td><td>Abhinav Yalamanchili</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
           <tr><td class="rank">11</td><td>Adam Zick</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
           <tr><td class="rank">12</td><td>Alex Matthews-Elston</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
-          <!-- rest unchanged -->
+          <tr><td class="rank">13</td><td>Anthony Daddi</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
+          <tr><td class="rank">14</td><td>Batool Ghazle</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
+          <tr><td class="rank">15</td><td>Benjamin Feldstein</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
+          <tr><td class="rank">16</td><td>Colin Hutton</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
+          <tr><td class="rank">17</td><td>Colton Shuman</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
+          <tr><td class="rank">18</td><td>Cormac Sullivan</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
+          <tr><td class="rank">19</td><td>Daniel Held</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
+          <tr><td class="rank">20</td><td>David Brassie</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
+          <tr><td class="rank">21</td><td>Emie Gerard</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
+          <tr><td class="rank">22</td><td>Eoghan Sack</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
+          <tr><td class="rank">23</td><td>Geoffrey Tse</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
+          <tr><td class="rank">24</td><td>Gleb Romanov</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
+          <tr><td class="rank">25</td><td>Jeffrey Morgan</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
+          <tr><td class="rank">26</td><td>Juliana Gentile</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
+          <tr><td class="rank">27</td><td>Lucas Aquilio</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
+          <tr><td class="rank">28</td><td>Madison Petrie</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
+          <tr><td class="rank">29</td><td>Meghan Clothier</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
+          <tr><td class="rank">30</td><td>Nathan Barbeto</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
+          <tr><td class="rank">31</td><td>Noah Seigel</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
+          <tr><td class="rank">32</td><td>Pearce Brissett</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
+          <tr><td class="rank">33</td><td>Rachel Spangler</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
+          <tr><td class="rank">34</td><td>Raphael Benjamin</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
+          <tr><td class="rank">35</td><td>Sara Allen</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
         </tbody>
       </table>
     </div>
