--- a/index.html
+++ b/index.html
@@ -117,43 +117,46 @@
           </tr>
         </thead>
         <tbody>
-          <tr><td class="rank">1</td><td>Brian Bork</td><td class="points">1</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">1</td></tr>
-          <tr><td class="rank">2</td><td>Christian Kurz</td><td class="points">1</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">1</td></tr>
-          <tr><td class="rank">3</td><td>Evan Gonsorcik</td><td class="points">1</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">1</td></tr>
-          <tr><td class="rank">4</td><td>Harrison Lutzer</td><td class="points">1</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">1</td></tr>
-          <tr><td class="rank">5</td><td>Jahlani Alamu</td><td class="points">1</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">1</td></tr>
-          <tr><td class="rank">6</td><td>Leonardo Filho</td><td class="points">1</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">1</td></tr>
-          <tr><td class="rank">7</td><td>Maddie Munson</td><td class="points">1</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">1</td></tr>
-          <tr><td class="rank">8</td><td>Makayla Rosettie</td><td class="points">1</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">1</td></tr>
-          <tr><td class="rank">9</td><td>Natalie Cuzzupoli</td><td class="points">1</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">1</td></tr>
+          <tr><td class="rank">1</td><td>Barbeto, Nathan</td><td class="points">1</td><td class="points">5</td><td class="points">0</td><td class="points">0</td><td class="points">6</td></tr>
+          <tr><td class="rank">2</td><td>Bork, Brian</td><td class="points">1</td><td class="points">5</td><td class="points">0</td><td class="points">0</td><td class="points">6</td></tr>
+          <tr><td class="rank">3</td><td>Hans, Korey</td><td class="points">0</td><td class="points">4</td><td class="points">0</td><td class="points">0</td><td class="points">4</td></tr>
+          <tr><td class="rank">4</td><td>Kurz, Christian</td><td class="points">1</td><td class="points">2</td><td class="points">0</td><td class="points">0</td><td class="points">3</td></tr>
 
-          <!-- ZERO POINTS -->
-          <tr><td class="rank">10</td><td>Abhinav Yalamanchili</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
-          <tr><td class="rank">11</td><td>Adam Zick</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
-          <tr><td class="rank">12</td><td>Alex Matthews-Elston</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
-          <tr><td class="rank">13</td><td>Anthony Daddi</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
-          <tr><td class="rank">14</td><td>Batool Ghazle</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
-          <tr><td class="rank">15</td><td>Benjamin Feldstein</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
-          <tr><td class="rank">16</td><td>Colin Hutton</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
-          <tr><td class="rank">17</td><td>Colton Shuman</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
-          <tr><td class="rank">18</td><td>Cormac Sullivan</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
-          <tr><td class="rank">19</td><td>Daniel Held</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
-          <tr><td class="rank">20</td><td>David Brassie</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
-          <tr><td class="rank">21</td><td>Emie Gerard</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
-          <tr><td class="rank">22</td><td>Eoghan Sack</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
-          <tr><td class="rank">23</td><td>Geoffrey Tse</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
-          <tr><td class="rank">24</td><td>Gleb Romanov</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
-          <tr><td class="rank">25</td><td>Jeffrey Morgan</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
-          <tr><td class="rank">26</td><td>Juliana Gentile</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
-          <tr><td class="rank">27</td><td>Lucas Aquilio</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
-          <tr><td class="rank">28</td><td>Madison Petrie</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
-          <tr><td class="rank">29</td><td>Meghan Clothier</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
-          <tr><td class="rank">30</td><td>Nathan Barbeto</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
-          <tr><td class="rank">31</td><td>Noah Seigel</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
-          <tr><td class="rank">32</td><td>Pearce Brissett</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
-          <tr><td class="rank">33</td><td>Raphael Benjamin</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
-          <tr><td class="rank">34</td><td>Sara Allen</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
+          <tr><td class="rank">5</td><td>Alamu, Jahlani</td><td class="points">1</td><td class="points">1</td><td class="points">0</td><td class="points">0</td><td class="points">2</td></tr>
+          <tr><td class="rank">6</td><td>Filho, Leonardo</td><td class="points">1</td><td class="points">1</td><td class="points">0</td><td class="points">0</td><td class="points">2</td></tr>
+          <tr><td class="rank">7</td><td>Gentile, Juliana</td><td class="points">0</td><td class="points">2</td><td class="points">0</td><td class="points">0</td><td class="points">2</td></tr>
+          <tr><td class="rank">8</td><td>Rosettie, Makayla</td><td class="points">1</td><td class="points">1</td><td class="points">0</td><td class="points">0</td><td class="points">2</td></tr>
 
+          <tr><td class="rank">9</td><td>Beshi, Klejdis</td><td class="points">0</td><td class="points">1</td><td class="points">0</td><td class="points">0</td><td class="points">1</td></tr>
+          <tr><td class="rank">10</td><td>Brissett, Pearce</td><td class="points">0</td><td class="points">1</td><td class="points">0</td><td class="points">0</td><td class="points">1</td></tr>
+          <tr><td class="rank">11</td><td>Cuzzupoli Natalie</td><td class="points">1</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">1</td></tr>
+          <tr><td class="rank">12</td><td>Clothier, Meghan</td><td class="points">0</td><td class="points">1</td><td class="points">0</td><td class="points">0</td><td class="points">1</td></tr>
+          <tr><td class="rank">13</td><td>Gerard, Emie</td><td class="points">0</td><td class="points">1</td><td class="points">0</td><td class="points">0</td><td class="points">1</td></tr>
+          <tr><td class="rank">14</td><td>Ghazle, Batool</td><td class="points">0</td><td class="points">1</td><td class="points">0</td><td class="points">0</td><td class="points">1</td></tr>
+          <tr><td class="rank">15</td><td>Gonsorcik, Evan</td><td class="points">1</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">1</td></tr>
+          <tr><td class="rank">16</td><td>Held, Daniel</td><td class="points">0</td><td class="points">1</td><td class="points">0</td><td class="points">0</td><td class="points">1</td></tr>
+          <tr><td class="rank">17</td><td>Munson, Maddie</td><td class="points">1</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">1</td></tr>
+          <tr><td class="rank">18</td><td>Shuman, Colton</td><td class="points">0</td><td class="points">1</td><td class="points">0</td><td class="points">0</td><td class="points">1</td></tr>
+
+          <tr><td class="rank">19</td><td>Allen, Sara</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
+          <tr><td class="rank">20</td><td>Aquilio, Lucas</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
+          <tr><td class="rank">21</td><td>Benjamin, Raphy</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
+          <tr><td class="rank">22</td><td>Byers, Lily</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
+          <tr><td class="rank">23</td><td>Daddi, Tony</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
+          <tr><td class="rank">24</td><td>Feldstein, Benjamin</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
+          <tr><td class="rank">25</td><td>Hutton, Colin</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
+          <tr><td class="rank">26</td><td>Lutzer, Harrison</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
+          <tr><td class="rank">27</td><td>Masters, Lauren</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
+          <tr><td class="rank">28</td><td>Matthews-Elston, Alex</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
+          <tr><td class="rank">29</td><td>Morgan, Jeffrey</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
+          <tr><td class="rank">30</td><td>Petrie, Madison</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
+          <tr><td class="rank">31</td><td>Sack, Eoghan</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
+          <tr><td class="rank">32</td><td>Seigel, Noah</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
+          <tr><td class="rank">33</td><td>Sullivan Cormac</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
+          <tr><td class="rank">34</td><td>Takahashi, Keiko</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
+          <tr><td class="rank">35</td><td>Tse, Geoffrey</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
+          <tr><td class="rank">36</td><td>Yalamanchili, Abhinav</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
+          <tr><td class="rank">37</td><td>Zick, Adam</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td><td class="points">0</td></tr>
         </tbody>
       </table>
     </div>
